refactor(bo-portal-service): clean layering and standardize service patterns